# mbtime

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: macros.h  mbtime01.c  mbtime01.h  mbtime_test.cpp
